--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -68,6 +68,52 @@
         <div class="searchError"></div>
       </div>
     </div>
+    <div class="library-btns-container">
+      <div class="library-btns">
+        <div class="button-container">
+          <button class="btn-border btn-library btn-watched">
+            <span class="button-text">WATCHED</span>
+          </button>
+        </div>
+        <div class="button-container">
+          <button class="btn-border btn-library btn-queue">
+            <span class="button-text">QUEUE</span>
+          </button>
+        </div>
+      </div>
+      <div class="clear-btn-container">
+        <button class="clear-btn clear-watched-btn">
+          <span class="clear-btn-text">Clear watched list</span>
+          <span class="icon-clear">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
+              />
+            </svg>
+          </span>
+        </button>
+        <button class="clear-btn clear-queue-btn">
+          <span class="clear-btn-text">Clear queue list</span>
+          <span class="icon-clear">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"
+              />
+            </svg>
+          </span>
+        </button>
+      </div>
+    </div>
   </section>
 </header>
 
