--- a/src/css/header.css
+++ b/src/css/header.css
@@ -428,7 +428,7 @@ i {
   /* margin: 18px; */
   margin-top: 170px;
   transition: all 1s;
-  display: flex;
+  display: none;
   flex-wrap: wrap;
   justify-content: center;
 }
@@ -502,7 +502,7 @@ i {
   color: #b92f2c;
 }
 
-.active {
+.active-btn {
   color: #333;
   background: #ffffff;
   border-color: #ffffff;
@@ -606,7 +606,6 @@ button .icon-clear {
   .logo-icon {
     width: 66px;
   }
-}
 
 @media screen and (min-width: 768px) {
   .header-section {
@@ -654,6 +653,12 @@ button .icon-clear {
   .btn-library {
     background: none;
   }
+  .active-btn {
+    color: #333;
+    background: #ffffff;
+    border-color: #ffffff;
+    color: #b92f2c;
+  }
 
   @media screen and (min-width: 930px) {
     .search-container {
@@ -687,7 +692,12 @@ button .icon-clear {
     }
     .library-btns-container {
       margin-top: 30px;
-      display: none;
+    }
+    .active-btn {
+      color: #333;
+      background: #ffffff;
+      border-color: #ffffff;
+      color: #b92f2c;
     }
   }
 
@@ -728,7 +738,7 @@ button .icon-clear {
       border-color: #fff;
       /* box-shadow: 0px 3px 10px 0px rgba(255, 255, 255, 0.75); */
     }
-    .active {
+    .active-btn {
       color: #333;
       background: #ffffff;
       border-color: #ffffff;
