change border color images

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -212,7 +212,7 @@ Custom pairs
   margin: 0 auto;
   width: 75px;
   height: 75px;
-  border: 2px solid #000;
+  border: 2px solid #b92f2c;
   border-radius: 20px;
   object-fit: cover;
 }
