--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,5 @@
 <footer class="footer" id="footer">
+
     <div class="footer-dark-mode"></div>
     <div class="footer-body-content">
         <p class="footer-font-size footer-font-flex">
@@ -24,8 +25,9 @@
 
 
 <!-- modal section -->
-
+<div class="footer-modal-overlay"></div>
 <div class="footer-modal footer-is-hidden footer-data-modal">
+    
     <div class="footer-modal-content footer-modal-dark-mode">
         <div class="footer-modal-close footer-data-modal-close">
             <img class="footer-close-icon" src="./images/icons/close-button.svg" alt="close-icon">
