--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,34 +1,4 @@
-/* --step--2: clamp(0.4338rem, 0.3383rem + 0.4771vw, 0.72rem);
-  --step--1: clamp(0.5206rem, 0.3942rem + 0.6323vw, 0.9rem);
-  --step-0: clamp(0.625rem, 0.4583rem + 0.8333vw, 1.125rem);
-  --step-1: clamp(0.75rem, 0.5313rem + 1.0938vw, 1.4063rem);
-  --step-2: clamp(0.9rem, 0.614rem + 1.4302vw, 1.7581rem);
-  --step-3: clamp(1.08rem, 0.7075rem + 1.8625vw, 2.1975rem);
-  --step-4: clamp(1.2963rem, 0.8127rem + 2.4177vw, 2.7469rem);
-  --step-5: clamp(1.555rem, 0.929rem + 3.1302vw, 3.4331rem);
-
-  --space-3xs: clamp(0.1875rem, 0.1458rem + 0.2083vw, 0.3125rem);
-  --space-2xs: clamp(0.3125rem, 0.2292rem + 0.4167vw, 0.5625rem);
-  --space-xs: clamp(0.5rem, 0.375rem + 0.625vw, 0.875rem);
-  --space-s: clamp(0.625rem, 0.4583rem + 0.8333vw, 1.125rem);
-  --space-m: clamp(0.9375rem, 0.6875rem + 1.25vw, 1.6875rem);
-  --space-l: clamp(1.25rem, 0.9167rem + 1.6667vw, 2.25rem);
-  --space-xl: clamp(1.875rem, 1.375rem + 2.5vw, 3.375rem);
-  --space-2xl: clamp(2.5rem, 1.8333rem + 3.3333vw, 4.5rem);
-  --space-3xl: clamp(3.75rem, 2.75rem + 5vw, 6.75rem);
-
-One-up pairs 
---space-3xs-2xs: clamp(0.1875rem, 0.0625rem + 0.625vw, 0.5625rem);
-  --space-2xs-xs: clamp(0.3125rem, 0.125rem + 0.9375vw, 0.875rem);
-  --space-xs-s: clamp(0.5rem, 0.2917rem + 1.0417vw, 1.125rem);
-  --space-s-m: clamp(0.625rem, 0.2708rem + 1.7708vw, 1.6875rem);
-  --space-m-l: clamp(0.9375rem, 0.5rem + 2.1875vw, 2.25rem);
-  --space-l-xl: clamp(1.25rem, 0.5417rem + 3.5417vw, 3.375rem);
-  --space-xl-2xl: clamp(1.875rem, 1rem + 4.375vw, 4.5rem);
-  --space-2xl-3xl: clamp(2.5rem, 1.0833rem + 7.0833vw, 6.75rem);
-
-Custom pairs
---space-s-l: clamp(0.625rem, 0.0833rem + 2.7083vw, 2.25rem); */
+/* FOOTER */
 
 .footer {
   background: #f7f7f7;
@@ -108,7 +78,7 @@ Custom pairs
 }
 
 .footer-modal:hover {
-  background: transparent;
+  background: #00000033;
   opacity: 0.95;
 }
 
@@ -298,6 +268,29 @@ Custom pairs
   background-color: #2f303a;
   color: #fff;
 }
+
+/* modal overlay */
+
+/* Adaugă stil pentru overlay */
+.footer-modal-overlay {
+  z-index: 9; /* Asigură că overlay este sub modal */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: #00000033;
+  opacity: 0; /* Inițial face overlay-ul invizibil */
+  pointer-events: none; /* Asigură că overlay-ul nu este interactiv când este invizibil */
+  transition: opacity 400ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-modal.is-visible .footer-modal-overlay {
+  opacity: 1; /* Face overlay-ul vizibil când modalul este deschis */
+  pointer-events: visiblePainted; /* Face overlay-ul interactiv când este vizibil */
+}
+
+
 
 /* modal tablet */
 
