bad path images

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -38,7 +38,7 @@
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
                         <source srcset="./images/bogdan-nemes@2x.webp" type="image/webp"/>
-                        <img class="footer-img-size" src="./images/bogdan-nemes.jpg" alt="Bogdan Nemes"/>
+                        <img class="footer-img-size" src="./images/bogdan-nemes.webp" alt="Bogdan Nemes"/>
                     </picture>
                     
                     <div class="footer-member-info">
@@ -67,7 +67,7 @@
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
                         <source srcset="./images/dan_retegan@2x.webp" type="image/webp"/>
-                        <img class="footer-img-size" src="./images/dan_retegan.jpg" alt="Dan Retegan"/>
+                        <img class="footer-img-size" src="./images/dan_retegan.webp" alt="Dan Retegan"/>
                     </picture>
                     
                     <div class="footer-member-info">
@@ -96,7 +96,7 @@
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
                         <source srcset="./images/ciprian-ropcean@2x.webp" type="image/webp"/>
-                        <img class="footer-img-size" src="./images/ciprian-ropcean.jpg" alt="Ciprian Ropcean"/>
+                        <img class="footer-img-size" src="./images/ciprian-ropcean.webp" alt="Ciprian Ropcean"/>
                     </picture>
                     <div class="footer-member-info">
                         <span class="footer-team-name">Ciprian Ropcean</span>
@@ -124,7 +124,7 @@
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
                         <source srcset="./images/andrei-rusu@2x.webp" type="image/webp"/>
-                        <img class="footer-img-size" src="./images/andrei-rusu.jpg" alt="Andrei Rusu"/>
+                        <img class="footer-img-size" src="./images/andrei-rusu.webp" alt="Andrei Rusu"/>
                     </picture>
                     <div class="footer-member-info">
                         <span class="footer-team-name">Andrei Rusu</span>
@@ -152,7 +152,7 @@
                 <div class="footer-team-card">
                     <picture class="footer-image-container">
                         <source srcset="./images/simon-khawam@2x.webp" type="image/webp"/>
-                        <img class="footer-img-size" src="./images/simon-khawam.jpg" alt="Simon Khawam"/>
+                        <img class="footer-img-size" src="./images/simon-khawam.webp" alt="Simon Khawam"/>
                     </picture>
                     <div class="footer-member-info">
                         <span class="footer-team-name">Simon Khawam</span>
@@ -160,7 +160,7 @@
                     </div>
                     <div class="footer-icon-cards">
                         <a 
-                            href="https://github.com/Tumoji/javascript-proiect-grupa-1" 
+                            href="https://github.com/Simonkhawam" 
                             class="footer-github-icon" 
                             aria-label="github"
                             target="_blank"
