--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -271,7 +271,7 @@
 
 /* modal overlay */
 
-.footer-modal-overlay {
+.footer-modal-cover {
   z-index: 9;
   position: fixed;
   top: 0;
@@ -284,7 +284,7 @@
   transition: opacity 400ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-modal.is-visible .footer-modal-overlay {
+.footer-modal.is-visible .footer-modal-cover {
   opacity: 1;
   pointer-events: visiblePainted
 }
