--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -25,7 +25,7 @@
 
 
 <!-- modal section -->
-<div class="footer-modal-overlay"></div>
+<div class="footer-modal-cover"></div>
 
 <div class="footer-modal footer-is-hidden footer-data-modal">
     
