redirect to index bug solve

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="btn-container-1">
-      <button class="btn-52" onclick="redirectToIndex()">
+      <button class="btn-52">
         <div class="original">HOME</div>
         <div class="letters">
           <!-- Place each letter in its own element -->
@@ -117,9 +117,4 @@
   </section>
 </header>
 
-<script>
-  function redirectToIndex() {
-    window.location.href = 'index.html';
-  }
-</script>
 <script type="module" src="./js/spinner.js"></script>
