rezolvare erori html

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,7 +18,7 @@
       </div>
     </div>
     <div class="btn-container-1">
-      <button class="btn-52">
+      <div class="btn-52">
         <div class="original">HOME</div>
         <div class="letters">
           <!-- Place each letter in its own element -->
@@ -27,10 +27,10 @@
           <span>M</span>
           <span>E</span>
         </div>
-      </button>
+      </div>
     </div>
     <div class="btn-container-2">
-      <button class="btn-53">
+      <div class="btn-53">
         <div class="original">MY LIBRARY</div>
         <div class="letters">
           <!-- Place each letter in its own element -->
@@ -45,7 +45,7 @@
           <span>R</span>
           <span>Y</span>
         </div>
-      </button>
+      </div>
     </div>
     <div class="search-container">
       <div class="form-container">
