--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -6,13 +6,24 @@
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: #fff;
-  padding: 20px;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-  overflow-y: auto;
+  overflow-y: hidden;
   z-index: 51;
   transition: opacity 0.3s ease-in-out;
+  margin: 0 auto;
+  padding: 40px 12px;
+  width: 100%;
+  max-width: 806px;
+  /* max-height: 558px; */
+  max-height: 550px;
+  height: max-content;
+}
+
+.modal {
+  width: 806px;
+  height: 558px;
+  flex-shrink: 0;
 }
 
 .modal-movie-card .flex {
@@ -26,13 +37,81 @@
   bottom: 150px;
 }
 
+/* .btn-close {
+  transform: translate(10px, -20px);
+  padding: 0.5rem 0.7rem;
+  background: #eee;
+  border-radius: 50%;
+} */
 .btn-close {
   transform: translate(10px, -20px);
   padding: 0.5rem 0.7rem;
   background: #eee;
   border-radius: 50%;
+  /* margin: 0;
+  font-family: inherit;
+  font-size: 80%;
+  line-height: 1.15;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: transparent;
+  border: none;
+  cursor: pointer; */
+}
+.modal-movie-tille {
+  font-family: 'Roboto';
+  color: #000;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
 }
 
+.modal-movie-overview {
+  color: #000;
+  font-family: 'Roboto';
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px; /* 166.667% */
+}
+
+.modal-content-details {
+  margin-top: -500px;
+  margin-left: 280px;
+  line-height: 20px;
+}
+
+.right-side-content {
+  color: #f57676;
+  /* max-width: 54%; */
+  text-align: -webkit-left;
+  /* display: flex;
+  flex-direction: column;
+  align-items: start;
+  color: black;
+  max-width: 50%;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: justify;
+  margin-right: 12px;
+  margin-left: 16px; */
+}
+.left-side-content {
+  height: auto;
+  display: grid;
+  /* grid-template-columns: 1fr 1fr; */
+  margin-bottom: -10px;
+}
+.image-size {
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 375px;
+  height: 478px;
+  margin-left: 20px;
+  border-radius: 15px;
+}
 .overlay {
   position: fixed;
   top: 0;
@@ -41,6 +120,15 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 50;
+}
+.backdrop {
+  width: 14px;
+  height: 14px;
+  position: absolute;
+  top: 16px;
+  right: 16px;
+  cursor: pointer;
+  opacity: 0.7;
 }
 
 .hidden {
@@ -52,6 +140,7 @@
 .modal-content {
   display: flex;
   flex-direction: column;
+  flex: 1;
 }
 
 .modal-movie-poster {
@@ -61,7 +150,7 @@
 }
 
 .modal-movie-overview {
-  width: 240px;
+  width: 480px;
   flex-shrink: 0;
   color: #000;
   font-family: Roboto;
@@ -69,4 +158,105 @@
   font-style: normal;
   font-weight: 500;
   line-height: 20px; /* 166.667% */
+}
+
+.btn-q-w {
+  justify-content: space-evenly;
+  line-height: 36px;
+  display: flex;
+  flex-wrap: nowrap;
+  font-size: 12px;
+  line-height: 1.33;
+  font-weight: 500;
+  text-transform: uppercase;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.25s;
+}
+.btn-q {
+  text-transform: uppercase;
+  cursor: pointer;
+  width: 132.58px;
+  height: 40px;
+  /* background-color: #deb887; */
+  border-radius: 100px;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.33;
+  transition: all 0.25s;
+  display: flex;
+  border: 1px solid #000;
+  cursor: pointer;
+}
+.btn-w {
+  text-transform: uppercase;
+  border: 1px solid #000;
+  cursor: pointer;
+  width: 132.58px;
+  height: 40px;
+  /* background-color: #deb887; */
+  border-radius: 100px;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.33;
+  transition: all 0.25s;
+  display: flex;
+  cursor: pointer;
+}
+.add-queue-btn {
+  color: #b92f2c;
+  text-align: center;
+  font-family: 'Roboto';
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.add-watched-btn {
+  color: #b92f2c;
+  text-align: center;
+  font-family: 'Roboto';
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.btn-q:hover,
+.btn-q:focus {
+  color: #ffffff;
+  background: #b92f2c;
+}
+.btn-w:hover,
+.btn-w:focus {
+  color: #ffffff;
+  background: #b92f2c;
+}
+
+.add-watched-btn:hover {
+  color: #ffffff;
+}
+.add-queue-btn:hover {
+  color: #ffffff;
+}
+.modal-movie-card-close {
+  cursor: pointer;
+  background: none;
+  border: none;
+  position: relative;
+  top: -30px;
+
+  left: 756px;
 }
