update to library
retrieving data from local storage for my library page under the buttons watched and queue, a problem to look at and to avoid refreshing the page to get the data on page.

--- a/src/partials/my-library.html
+++ b/src/partials/my-library.html
@@ -1,1 +1,4 @@
-<div class="library"><p>You will find your movies here</p></div>
+<section class="library">
+  <section class="library-queue queue-hidden"></section>
+  <section class="library-watched watched-hidden"></section>
+</section>
