commit to library
modifying library.js.
removing file my-library-markup.js
adding classes in my-library.html

--- a/src/partials/my-library.html
+++ b/src/partials/my-library.html
@@ -1,4 +1,4 @@
-<section class="library">
-  <section class="library-queue queue-hidden"></section>
-  <section class="library-watched watched-hidden"></section>
+<section class="library gallery">
+  <div class="library-queue queue-hidden movie-container"></div>
+  <div class="library-watched watched-hidden movie-container"></div>
 </section>
