hide scroll-button

--- a/src/css/scroll-button.css
+++ b/src/css/scroll-button.css
@@ -1,6 +1,10 @@
 /* scroll-button.css */
 
 /* Fixed button */
+#btn-back-to-top {
+  display: none;
+}
+
 .fixedbutton {
   background-color: transparent;
   border: none;
