--- a/src/css/header.css
+++ b/src/css/header.css
@@ -3,6 +3,9 @@
   } */
 body {
   transition: background-color 1s; /* Add transition for smooth color change */
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 @keyframes rotation {
@@ -607,91 +610,51 @@ button .icon-clear {
     width: 66px;
   }
 
-@media screen and (min-width: 768px) {
-  .header-section {
-    height: 316px;
-  }
-  .logo-icon {
-    width: 66px;
-  }
-  .dark-gradient-mobile {
-    background: linear-gradient(
-      to bottom,
-      rgba(0, 0, 0, 0.3),
-      rgba(0, 0, 0, 0) 100%
-    );
-  }
-  .search-container {
-    margin-top: 80px;
-    margin-left: 0px;
-  }
-  .btn-container-1 {
-    z-index: 2;
-    display: flex;
-    flex-wrap: wrap;
-    position: absolute;
-    /* flex-direction: row; */
-    transition: all 1s;
-    top: 100px;
-    left: 0;
-    width: 215px;
-  }
-  .btn-container-2 {
-    z-index: 2;
-    display: flex;
-    flex-wrap: wrap;
-    position: absolute;
-    /* flex-direction: row; */
-    transition: all 1s;
-    top: 100px;
-    left: 199px;
-    width: 215px;
-  }
-  .library-btns-container {
-    margin-top: 64px;
-  }
-  .btn-library {
-    background: none;
-  }
-  .active-btn {
-    color: #333;
-    background: #ffffff;
-    border-color: #ffffff;
-    color: #b92f2c;
-  }
-
-  @media screen and (min-width: 930px) {
+  @media screen and (min-width: 768px) {
+    .header-section {
+      height: 316px;
+    }
+    .logo-icon {
+      width: 66px;
+    }
+    .dark-gradient-mobile {
+      background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.3),
+        rgba(0, 0, 0, 0) 100%
+      );
+    }
     .search-container {
-      margin-top: 50px;
+      margin-top: 80px;
+      margin-left: 0px;
     }
     .btn-container-1 {
       z-index: 2;
       display: flex;
       flex-wrap: wrap;
       position: absolute;
+      /* flex-direction: row; */
       transition: all 1s;
-      top: 6%;
-      left: 400px;
+      top: 100px;
+      left: 0;
+      width: 215px;
     }
     .btn-container-2 {
       z-index: 2;
       display: flex;
       flex-wrap: wrap;
       position: absolute;
+      /* flex-direction: row; */
       transition: all 1s;
-      top: 6%;
-      left: 630px;
-      width: 210px;
-    }
-
-    i {
-      color: #111;
-      font-size: 22px;
-      padding-top: 1px;
-      transition: all 300ms ease;
+      top: 100px;
+      left: 199px;
+      width: 215px;
     }
     .library-btns-container {
-      margin-top: 30px;
+      margin-top: 64px;
+    }
+    .btn-library {
+      background: none;
     }
     .active-btn {
       color: #333;
@@ -699,50 +662,91 @@ button .icon-clear {
       border-color: #ffffff;
       color: #b92f2c;
     }
-  }
 
-  @media screen and (min-width: 1280px) {
-    .header-section {
-      width: 1216px;
-    }
-    .logo-icon {
-      width: 66px;
-    }
-    .btn-toggle {
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      z-index: 6;
-      /* background-color: yellow; */
-      position: absolute;
-      bottom: 0;
-      right: 0;
+    @media screen and (min-width: 930px) {
+      .search-container {
+        margin-top: 50px;
+      }
+      .btn-container-1 {
+        z-index: 2;
+        display: flex;
+        flex-wrap: wrap;
+        position: absolute;
+        transition: all 1s;
+        top: 6%;
+        left: 400px;
+      }
+      .btn-container-2 {
+        z-index: 2;
+        display: flex;
+        flex-wrap: wrap;
+        position: absolute;
+        transition: all 1s;
+        top: 6%;
+        left: 630px;
+        width: 210px;
+      }
+
+      i {
+        color: #111;
+        font-size: 22px;
+        padding-top: 1px;
+        transition: all 300ms ease;
+      }
+      .library-btns-container {
+        margin-top: 30px;
+      }
+      .active-btn {
+        color: #333;
+        background: #ffffff;
+        border-color: #ffffff;
+        color: #b92f2c;
+      }
     }
 
-    i {
-      color: #111;
-      font-size: 22px;
-      padding-top: 1px;
-      transition: all 300ms ease;
-    }
+    @media screen and (min-width: 1280px) {
+      .header-section {
+        width: 1216px;
+      }
+      .logo-icon {
+        width: 66px;
+      }
+      .btn-toggle {
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        z-index: 6;
+        /* background-color: yellow; */
+        position: absolute;
+        bottom: 0;
+        right: 0;
+      }
 
-    .active1 {
-      transform: translateX(33px) rotate(350deg);
-      color: #fff;
-    }
+      i {
+        color: #111;
+        font-size: 22px;
+        padding-top: 1px;
+        transition: all 300ms ease;
+      }
 
-    .changeBg {
-      background-color: #111;
-      border-color: #fff;
-      /* box-shadow: 0px 3px 10px 0px rgba(255, 255, 255, 0.75); */
-    }
-    .active-btn {
-      color: #333;
-      background: #ffffff;
-      border-color: #ffffff;
-      color: #b92f2c;
+      .active1 {
+        transform: translateX(33px) rotate(350deg);
+        color: #fff;
+      }
+
+      .changeBg {
+        background-color: #111;
+        border-color: #fff;
+        /* box-shadow: 0px 3px 10px 0px rgba(255, 255, 255, 0.75); */
+      }
+      .active-btn {
+        color: #333;
+        background: #ffffff;
+        border-color: #ffffff;
+        color: #b92f2c;
+      }
     }
   }
 }
