--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,5 +1,6 @@
 <!-- gallery.html -->
 
+<!-- Main Gallery -->
 <section class="gallery" id="gallery">
   <div class="movie-container">
     <!-- Aici vor fi afișate cardurile filmelor -->
