--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -62,9 +62,10 @@
   pointer-events: visiblePainted;
 }
 
-.footer-modal.is-visible {
+/* .footer-modal.is-visible {
   visibility: visible;
-}
+} */
+
 
 .footer-modal-content {
   padding: 25px 10px;
@@ -115,7 +116,7 @@
 }
 
 .footer-font-title {
-  margin-top: 2px;
+  margin-top: auto;
   color: #000;
   justify-content: center;
   align-items: center;
@@ -259,9 +260,14 @@
   background-image: url(../images/icons/github.svg);
 }
 
-.footer-linkedin-icon:hover,
+/* .footer-linkedin-icon:hover,
 .footer-github-icon:hover {
   background-color: #b92f2c;
+} */
+
+.footer-linkedin-icon:hover,
+.footer-github-icon:hover {
+  filter: invert(0.3) sepia(150%) saturate(5500%) hue-rotate(30deg);
 }
 
 .footer-dark-mode {
@@ -279,14 +285,23 @@
   width: 100vw;
   height: 100vh;
   background: #00000033;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 400ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* opacity: 0; */
+  /* pointer-events: none; */
+  /* transition: opacity 400ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
-.footer-modal.is-visible .footer-modal-cover {
+/* .footer-modal.footer-is-hidden .footer-modal-cover {
   opacity: 1;
-  pointer-events: visiblePainted
+  pointer-events: visiblePainted;
+} */
+
+/* .footer-modal.footer-is-hidden {
+  visibility: hidden;
+  transform: scale(1.1);
+} */
+
+.footer-is-hidden {
+  display: none;
 }
 
 
