andrei linkein account

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -138,7 +138,7 @@
                                 >     
                             </a>
                             <a 
-                                href="https://linkedin.com/" 
+                                href="https://ro.linkedin.com/in/andrei-rusu-270719288" 
                                 class="footer-linkedin-icon" 
                                 aria-label="linkedin"
                                 target="_blank"
