adding margin-top to footer
adding margin-top auto to the footer class, removing the Esc button from exiting modal and adding LinkedIn profile of Simon

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -166,7 +166,7 @@
                                 >     
                             </a>
                             <a 
-                                href="https://linkedin.com" 
+                                href="http://linkedin.com/in/simon-khawam-7b138371" 
                                 class="footer-linkedin-icon" 
                                 aria-label="linkedin"
                                 target="_blank"
