--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,7 +2,7 @@
 
 .footer {
   background: #f7f7f7;
-  margin: 0;
+  margin-top: auto;
 }
 
 .footer-body-content {
@@ -116,7 +116,7 @@
 }
 
 .footer-font-title {
-  margin-top: auto;
+  margin-top: 2px;
   color: #000;
   justify-content: center;
   align-items: center;
