--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -4,3 +4,5 @@
     <!-- Aici vor fi afișate cardurile filmelor -->
   </div>
 </section>
+
+<script type="module" src="./js/pagination.js"></script>
