--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,4 +1,4 @@
-/* FOOTER */
+/* FOOTER css*/
 
 .footer {
   background: #f7f7f7;
@@ -61,7 +61,6 @@
   justify-content: center;
   align-items: center;
   transition: 400ms cubic-bezier(0.4, 0, 0.2, 1);
-  overflow-y: auto;
   /* pointer-events: visiblePainted; */
 }
 
