--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -24,7 +24,7 @@
 .footer-font-size {
   color: #545454;
   text-align: center;
-  font-family: Roboto;
+  font-family: 'Roboto';
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
@@ -56,7 +56,6 @@
   justify-content: center;
   align-items: center;
   transition: 400ms cubic-bezier(0.4, 0, 0.2, 1);
-  /* pointer-events: visiblePainted; */
 }
 
 .footer-modal-content {
@@ -87,7 +86,6 @@
   background-color: #fff;
   padding: 2px 4px;
   border-radius: 12px;
-  /* outline: none; */
   width: clamp(1.08rem, 0.7075rem + 1.8625vw, 2.1975rem);
   height: clamp(1.08rem, 0.7075rem + 1.8625vw, 2.1975rem);
 }
@@ -112,7 +110,7 @@
   color: #000;
   justify-content: center;
   align-items: center;
-  font-family: Roboto;
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
   line-height: clamp(12px, 14px, 20px);
@@ -199,7 +197,7 @@
   font-weight: 500;
   line-height: normal;
   letter-spacing: 0.48px;
-  font-family: Roboto;
+  font-family: 'Roboto';
 }
 
 .footer-team-function {
@@ -211,7 +209,7 @@
   font-weight: 500;
   line-height: 133.333%;
   letter-spacing: 0.48px;
-  font-family: Roboto;
+  font-family: 'Roboto';
 }
 
 .footer-icon-cards {
