--- a/src/partials/my-library.html
+++ b/src/partials/my-library.html
@@ -1,4 +1,10 @@
 <section class="library gallery">
-  <div class="library-queue queue-hidden movie-container"></div>
-  <div class="library-watched watched-hidden movie-container"></div>
+  <div
+    id="movieContainer"
+    class="library-queue queue-hidden movie-container"
+  ></div>
+  <div
+    id="movieContainer"
+    class="library-watched watched-hidden movie-container"
+  ></div>
 </section>
