change div into section
change div into section

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -25,7 +25,7 @@
 
 <!-- modal section -->
 
-    <div class="footer-modal footer-is-hidden">
+    <section class="footer-modal footer-is-hidden">
         <div class="footer-modal-content footer-modal-dark-mode">
             <div class="footer-modal-close">
                 <img class="footer-close-icon" src="./images/icons/close-button.svg" alt="close-icon">
@@ -179,4 +179,4 @@
                 <div class="footer-modal-cover footer-is-hidden"></div>
             </div>
         </div>
-    </div>
+    </section>
